--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ $(document).ready(function() {
 				<div id="header" class="container">
 					
 					<!-- Logo -->
-						<h1 id="logo"><a href="index.html">Greenmeadow</a></h1>
+						<h1 id="logo"><a href="index.html"><img src="TextLogo"></a></h1>
 					
 					<!-- Nav -->
 						<nav id="nav">
