Added scheduling test images

--- a/index.html
+++ b/index.html
@@ -107,31 +107,20 @@ $(document).ready(function() {
 				<div class="container">
 					<div class="row">
 						<section class="6u 12u(2) feature">
-							<div class="image-wrapper first">
-								<!-- <a href="#" class="image featured first"><img src="images/pic01.jpg" alt="" /></a> -->
-
-
-							<a href="images/pic01.jpg" rel="single"  class="image featured first pirobox" title="your title">
-    						<img src="images/pic01.jpg"  />
-							</a>
- 
-
-
-
-
+							<div class="image-wrapper">
+								<a href="#" class="image featured"><img src="testimage1.png" alt="" /></a>
 							</div>
 							<header>
-								<h2>Pool Schedule<br />
-								</h2>
+								<h2>Pool Schedule</h2>
 							</header>
-							<p>The pool schedule shows the upcoming schedule for the next week. For more detailed information go to the pools website.</p>
+							<p>This is the Pool schedule for the upcoming month for more information refer to the schedules page.</p>
 							<ul class="actions">
 								<li><a href="#" class="button">Pool Schedule</a></li>
 							</ul>
 						</section>
 						<section class="6u 12u(2) feature">
 							<div class="image-wrapper">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="testimage1.png" alt="" /></a>
 							</div>
 							<header>
 								<h2>Community Schedule</h2>
