--- a/index.html
+++ b/index.html
@@ -108,14 +108,14 @@ $(document).ready(function() {
 					<div class="row">
 						<section class="6u 12u(2) feature">
 							<div class="image-wrapper">
-								<a href="#" class="image featured"><img src="testimage1.png" alt="" /></a>
+								<a href="schedule.html" class="image featured"><img src="testimage1.png" alt="" /></a>
 							</div>
 							<header>
 								<h2>Pool Schedule</h2>
 							</header>
 							<p>This is the Pool schedule for the upcoming month for more information refer to the schedules page.</p>
 							<ul class="actions">
-								<li><a href="#" class="button">Pool Schedule</a></li>
+								<li><a href="schedule.html" class="button">Pool Schedule</a></li>
 							</ul>
 						</section>
 						<section class="6u 12u(2) feature">
