Added a new description

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ $(document).ready(function() {
 				<section class="container">
 					<header class="major">
 						<h2>About Greenmeadow</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pharetra interdum eros bibendum bibendum. Duis ante massa, vehicula at pretium non, consectetur nec nisi. Integer molestie feugiat malesuada. Nulla imperdiet leo purus, condimentum placerat nibh mattis at. Aenean porta ultricies vehicula. Nullam gravida accumsan aliquet. Donec quis libero lorem. Quisque dignissim nunc ut ultrices pharetra. Proin ac sapien elementum, semper est non, semper turpis. </p>
+						<p>From its start in 1954 Greenmeadow was designed to be a family community with easy proximity to shopping, libraries and schools. Inspired by principals of modern architecture conceived by Frank Lloyd Wright, Joe Eichler built homes featuring spacious living areas and lots, floor-to-ceiling windows and three or more bedrooms, which he located around a community center, pool</p>
 					</header>
 
 					<ul class="actions major">
