--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ $(document).ready(function() {
 				</div>
 				<div id="copyright" class="container">
 					<ul class="menu">
-						<li>&copy; Greenmeadow.</li><li>Design: <a href="http://html5up.net">Designed By Tolga Beser</a></li>
+						<li>&copy; Greenmeadow</li><li><a href="https://github.com/TolgaB">Created By Tolga Beser</a></li>
 					</ul>
 				</div>
 			</div>
