--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@ $(document).ready(function() {
 				<section class="container">
 					<header class="major">
 						<h2>About Greenmeadow</h2>
-						<p>From its start in 1954 Greenmeadow was designed to be a family community with easy proximity to shopping, libraries and schools. Inspired by principals of modern architecture conceived by Frank Lloyd Wright, Joe Eichler built homes featuring spacious living areas and lots, floor-to-ceiling windows and three or more bedrooms, which he located around a community center, pool</p>
+						<p>From its start in 1954 Greenmeadow was designed to be a family community with easy proximity to shopping, libraries and schools. Inspired by principals of modern architecture conceived by Frank Lloyd Wright, Joe Eichler built homes featuring spacious living areas and lots, floor-to-ceiling windows and three or more bedrooms, which he located around a community center...</p>
 					</header>
 
 					<ul class="actions major">
-						<li><a href="#" class="button">More About Greenmeadow</a></li>
+						<li><a href="#" class="button"> Read More About Greenmeadow</a></li>
 					</ul>
 				</section>
 			</div>
@@ -162,7 +162,7 @@ $(document).ready(function() {
 				<div id="footer" class="container">
 					<header class="major">
 						<h2>Contact Greenmeadow</h2>
-						<p>If you want to make inquiries about events, rentals or just want to ask some questions about the pool feel free to send us an email.</p>
+						<p>If you want to make inquiries about events, rentals or just want to ask some questions about the pool, feel free to send us an email.</p>
 					</header>
 					<div class="row" allign="center">
 						<section class="6u 12u(2)">
