Adding small fixes- There will be alot of commits with this same message

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ $(document).ready(function() {
 				<div id="header" class="container">
 					
 					<!-- Logo -->
-						<h1 id="logo"><a href="index.html"><img src="TextLogo.png" width=300 height=60></a></h1>
+						<h1 id="logo"><a href="index.html"><img src="TextLogo.png" width=270 height=60></a></h1>
 					
 					<!-- Nav -->
 						<nav id="nav">
@@ -147,7 +147,7 @@ $(document).ready(function() {
 				<section class="container">
 					<header class="major">
 						<h2>About Greenmeadow</h2>
-						<p>From its start in 1954 Greenmeadow was designed to be a family community with easy proximity to shopping, libraries and schools. Inspired by principals of modern architecture conceived by Frank Lloyd Wright, Joe Eichler built homes featuring spacious living areas and lots, floor-to-ceiling windows and three or more bedrooms, which he located around a community center...</p>
+						<p>From its start in 1954, Greenmeadow was designed to be a family community with easy proximity to shopping, libraries and schools. Inspired by principals of modern architecture conceived by Frank Lloyd Wright, Joe Eichler built homes featuring spacious living areas and lots, floor-to-ceiling windows and three or more bedrooms, which he located around a community center...</p>
 					</header>
 
 					<ul class="actions major">
