Adding small fixes- There will be alot of commits with this same message

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ $(document).ready(function() {
 			<div id="promo-wrapper">
 				<section id="promo">
 					<h2>For More Information About The Pool</h2>
-					<a href="#" class="button">Pool Site</a>
+					<a href="http://www.teamunify.com/Home.jsp?team=recpagm" class="button">Pool Site</a>
 				</section>
 			</div>
 			
