Adding small fixes- There will be alot of commits with this same message

--- a/index.html
+++ b/index.html
@@ -64,19 +64,10 @@ $(document).ready(function() {
 								<li>
 									<a href="">Home</a>
 									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
-										<li>
-											<a href="">Phasellus consequat</a>
-											<ul>
-												<li><a href="#">Lorem ipsum dolor</a></li>
-												<li><a href="#">Phasellus consequat</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam dolore nisl</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
+										<li><a href="#subSchedule">Schedule</a></li>
+										<li><a href="#promo-wrapper">Pool</a></li>
+										<li><a href="#subAbout">About</a></li>
+										<li><a href="#footer-wrapper">Contact</a></li>
 									</ul>
 								</li>
 								<li><a href="left-sidebar.html">Schedule</a></li>
@@ -108,7 +99,7 @@ $(document).ready(function() {
 					<div class="row">
 						<section class="6u 12u(2) feature">
 							<div class="image-wrapper">
-								<a href="schedule.html" class="image featured"><img src="testimage1.png" alt="" /></a>
+								<a href="schedule.html" class="image featured"><img src="testimage1.png" alt="" id="subSchedule" /></a>
 							</div>
 							<header>
 								<h2>Pool Schedule</h2>
@@ -136,14 +127,14 @@ $(document).ready(function() {
 			
 		<!-- Promo -->
 			<div id="promo-wrapper">
-				<section id="promo">
+				<section id="promo" >
 					<h2>For More Information About The Pool</h2>
 					<a href="http://www.teamunify.com/Home.jsp?team=recpagm" class="button">Pool Site</a>
 				</section>
 			</div>
 			
 		
-			<div class="wrapper">
+			<div class="wrapper" id="subAbout">
 				<section class="container">
 					<header class="major">
 						<h2>About Greenmeadow</h2>
@@ -158,11 +149,11 @@ $(document).ready(function() {
 		
 
 		<!-- Footer -->
-			<div id="footer-wrapper">
+			<div id="footer-wrapper" >
 				<div id="footer" class="container">
 					<header class="major">
 						<h2>Contact Greenmeadow</h2>
-						<p>If you want to make inquiries about events, rentals or just want to ask some questions about the pool, feel free to send us an email.</p>
+						<p >If you want to make inquiries about events, rentals or just want to ask some questions about the pool, feel free to send us an email.</p>
 					</header>
 					<div class="row" allign="center">
 						<section class="6u 12u(2)">
