--- a/schedule.html
+++ b/schedule.html
@@ -63,19 +63,10 @@ $(document).ready(function() {
 								<li>
 									<a href="">Home</a>
 									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
-										<li>
-											<a href="">Phasellus consequat</a>
-											<ul>
-												<li><a href="#">Lorem ipsum dolor</a></li>
-												<li><a href="#">Phasellus consequat</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam dolore nisl</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
+										<li><a href="#subSchedule">Schedule</a></li>
+										<li><a href="#subPool">Pool</a></li>
+										<li><a href="#subAbout">About</a></li>
+										<li><a href="#subContact">Contact</a></li>
 									</ul>
 								</li>
 								<li><a href="left-sidebar.html">Schedule</a></li>
